@@ -39,22 +39,14 @@ public class ExcludedPhenotypes {
      * The other HPO Ids from the phenopacket are removed in getExcludedPhenotypes method.
      */
     public Set<TermId> getExcludedForHpoTerm(TermId hpoId) {
-        Set<TermId> excluded;
         Set<TermId> associatedMaxoTermIds = hpoToMaxoTermIdMap.get(hpoId);
-        List<Set<TermId>> maxoIdHpoIds = new ArrayList<>();
-        if (associatedMaxoTermIds == null) {
-            excluded = Set.of();
-        } else if (associatedMaxoTermIds.size() == 1) {
-            TermId maxoId = associatedMaxoTermIds.iterator().next();
-            excluded = maxoToHpoTermIdMap.get(maxoId);
-        } else if (associatedMaxoTermIds.isEmpty()) {
-            excluded = Set.of();
-        } else {
-            associatedMaxoTermIds.forEach(mid -> maxoIdHpoIds.add(maxoToHpoTermIdMap.get(mid)));
-            // get intersection of sets
-            excluded = getIntersection(maxoIdHpoIds);
+        if (associatedMaxoTermIds == null || associatedMaxoTermIds.isEmpty()) {
+            return Collections.emptySet();
         }
-        return excluded;
+        List<Set<TermId>> maxoIdHpoIds = associatedMaxoTermIds.stream()
+                .map(maxoToHpoTermIdMap::get)
+                .collect(Collectors.toList());
+        return getIntersection(maxoIdHpoIds);
     }
 
     /**
@@ -63,7 +55,7 @@ public class ExcludedPhenotypes {
      * @return Set of excluded phenotypes. These are phenotypes that can be ascertained by MAxO terms,
      *  but are not included in the existing phenotypes in the phenopacket.
      */
-    public Set<TermId> getExcludedPhenotypes(PhenopacketData samplePpkt) {
+    public Set<TermId> getExcludedPhenotypeIds(PhenopacketData samplePpkt) {
         Set<TermId> existingTerms = new HashSet<>();
         existingTerms.addAll(samplePpkt.observed().stream().map(MySimpleTerm::tid).collect(Collectors.toSet()));
         existingTerms.addAll(samplePpkt.excluded().stream().map(MySimpleTerm::tid).collect(Collectors.toSet()));
